--- a/Estudos/Html e CSS/Exercicios/desafios/Desafio10/Temtativa/style.css
+++ b/Estudos/Html e CSS/Exercicios/desafios/Desafio10/Temtativa/style.css
@@ -1,8 +1,16 @@
 @charset "UTF-8";
+
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@300;500;700&display=swap');
+
+@font-face {
+    font-family: "idroid";
+    src: url("fonts/idroid.otf") format("opentype");
+}
+
 body{
     margin: 0;
     background-color: #84e1ad;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: sans-serif;
     
 }
 
@@ -14,25 +22,34 @@ header{
 }
 
 header > h1{
-
+    font-family: 'Oswald', 'Times New Roman', Times, serif;
+    text-transform: uppercase;
+    font-weight: 400;
+    text-shadow: 2px 2px 7px rgba(0, 0, 0, 0.39);
 }
 
 header > h2{
     font-size: 1em;
     font-weight: 100;
+    color: rgba(255, 255, 255, 0.678);
     
 }
 
 nav{
     margin: 0px auto 0px 10px;
-    
     text-align: left;
+    font-weight: bold;
 }
 
 nav > a{
     margin-left: 10px;
     color: white;
     text-decoration: none;
+}
+
+nav > a:hover{
+    text-decoration: underline;
+    color: rgb(0, 27, 4);
 }
 
 main{
@@ -43,6 +60,7 @@ main{
     height: auto;
     border-radius: 0px 0px 10px 10px ;
     box-shadow: 2px 2px 3px 3px rgba(0, 0, 0, 0.205);
+    font-weight: 700;
 }
 
 main > p{
@@ -51,9 +69,22 @@ main > p{
     
 }
 
+main > h1{
+        font-family: idroid ,Arial, Helvetica, sans-serif;
+        color: #1A5C38;
+}
+
 main > h2{
     background-image: linear-gradient(90deg , #84e1ac8f, white);
+    font-family: idroid ,Arial, Helvetica, sans-serif;
     color: #1A5C38;
+    padding: 5px;
+}
+
+p > a{
+    
+    color: #1A5C38;
+    text-decoration: none;
 }
 
 footer{
@@ -62,23 +93,53 @@ footer{
     text-align: center;
     padding: 5px;
     margin-top: 10px;
+    font-size: 0.8em;
 }
 
-div{
-    width: 600;
+footer > p{
+    margin: 0px;
+}
+
+.alinhamento{
+    margin: 10px auto ;
+    width: 300px;
+}
+
+.balao{
     margin: 10px auto;
     background-color: #84e1ac8a;
     color: white;
     border-radius: 10px 10px;
     height: 400px;
+    padding: 0px;
 }
 
-div > p{
+.balao > p{
+    margin: 15px 10px;
+    color: black;
+}
+
+.balao > ul{
+    column-count: 2;
+    text-decoration: underline;
+    color: black;
+    
+}
+
+#cabecario{
     background-color: #44775a;
     padding: 10px;
     border-radius: 10px 10px 0px 0px;
+    margin: 0px;
+    color: white;
 }
 
-footer > p{
-    margin: 0px;
+#boxvideo{
+    background-color: #1A5C38;
+    padding: 10px;
+    margin: auto;
+}
+
+.vid{
+    margin: 0px 35px;
 }
